chore: change license from MIT to Apache 2.0

--- a/reddit-cover-letter.html
+++ b/reddit-cover-letter.html
@@ -421,7 +421,7 @@
     <p><strong>API Access:</strong> READ-ONLY via Reddit Data API (OAuth scope: <code>read</code> only)<sup><a href="#fn11">[11]</a></sup></p>
     <p><strong>Rate Limiting:</strong> Token bucket algorithm, 60 requests/minute maximum<sup><a href="#fn17">[17]</a></sup></p>
     <p><strong>Caching:</strong> LRU cache (100 items) to reduce redundant API calls<sup><a href="#fn18">[18]</a></sup></p>
-    <p><strong>Repository:</strong> <a href="https://github.com/stharrold/erkinney-mcp" target="_blank">https://github.com/stharrold/erkinney-mcp</a> (MIT License, open for audit)<sup><a href="#fn22">[22]</a></sup></p>
+    <p><strong>Repository:</strong> <a href="https://github.com/stharrold/erkinney-mcp" target="_blank">https://github.com/stharrold/erkinney-mcp</a> (Apache License 2.0, open for audit)<sup><a href="#fn22">[22]</a></sup></p>
 
     <!-- 3. ETHICAL CONSIDERATIONS -->
     <h2>3. Ethical Considerations</h2>
@@ -533,7 +533,7 @@
 
     <h3>Repository</h3>
     <p><strong>URL:</strong> <a href="https://github.com/stharrold/erkinney-mcp" target="_blank">https://github.com/stharrold/erkinney-mcp</a></p>
-    <p>The complete source code is open-source (MIT License) and available for audit.<sup><a href="#fn22">[22]</a></sup> We will maintain confidentiality of any Reddit confidential information.<sup><a href="#fn23">[23]</a></sup></p>
+    <p>The complete source code is open-source (Apache License 2.0) and available for audit.<sup><a href="#fn22">[22]</a></sup> We will maintain confidentiality of any Reddit confidential information.<sup><a href="#fn23">[23]</a></sup></p>
 
     <h3>5 MCP Tools (READ-ONLY)</h3>
     <ol>
