chore: organize PDFs into docs/references and update links

--- a/reddit-cover-letter.html
+++ b/reddit-cover-letter.html
@@ -573,7 +573,7 @@
     <!-- Attachments -->
     <h2>Attachments</h2>
     <ol>
-        <li><strong>IRB Approval Letter</strong> - IRB_28905.pdf</li>
+        <li><strong>IRB Approval Letter</strong> - docs/references/IRB_28905.pdf</li>
         <li><strong>Comprehensive Answers Document</strong> - reddit-answers.md</li>
         <li><strong>Source Code Repository</strong> - <a href="https://github.com/stharrold/erkinney-mcp" target="_blank">https://github.com/stharrold/erkinney-mcp</a></li>
     </ol>
